# polylx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  ci-environment.yml  environment-dev.yml  environment.yml  ipolylx  polylx.shell  polylx_tutorial.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pythontest.yml  release.yml  testrelease.yml
ci/: deploy_anaconda.sh
conda-build/polylx/: meta.yaml
docs/: Makefile  automodules.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  polylx.core.rst  polylx.plots.rst  polylx.reports.rst  polylx.rst  tutorial.nblink  tutorial.rst  usage.rst
notebooks/: polylx_tutorial.ipynb
polylx/: __init__.py  core.py  plots.py  reports.py  shell.py  utils.py
polylx/example/: fracs.dbf  fracs.gpkg  fracs.shp  fracs.shx  m1sub.dbf  m1sub.shp  m1sub.shx  plg202.dbf  plg202.jml  plg202.shp  plg202.shx  sg2.dbf  sg2.gpkg  sg2.shp  sg2.shx  test10.dbf  test10.shp  test10.shx
tests/: test_polylx.py
